# libscratchcpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  iscratchsprite.h  iscratchstage.h  libscratchcpp_global.h  project.cpp  project_p.cpp  project_p.h  rect.cpp  rect_p.cpp  rect_p.h  scratchconfiguration.cpp  scratchconfiguration.h  scratchconfiguration_p.cpp  scratchconfiguration_p.h  scratchproject.cpp  scratchproject.h  test_export.h
src/audio/: CMakeLists.txt  audioengine.cpp  audioengine.h  audioinput.cpp  audioinput.h  audiooutput.cpp  audiooutput.h  audioplayer.cpp  audioplayer.h  audioplayerfactory.cpp  audioplayerfactory.h  audioplayerstub.cpp  audioplayerstub.h  iaudioengine.h  iaudioinput.h  iaudioloudness.h  iaudiooutput.h  iaudioplayer.h  iaudioplayerfactory.h
src/blocks/: CMakeLists.txt  blocks.cpp  blocks.h  controlblocks.cpp  controlblocks.h  customblocks.cpp  customblocks.h  eventblocks.cpp  eventblocks.h  listblocks.cpp  listblocks.h  looksblocks.cpp  looksblocks.h  motionblocks.cpp  motionblocks.h  operatorblocks.cpp  operatorblocks.h  sensingblocks.cpp  sensingblocks.h  soundblocks.cpp  soundblocks.h  standardblocks.cpp  standardblocks.h  variableblocks.cpp  variableblocks.h
src/dev/: CMakeLists.txt
src/engine/: CMakeLists.txt  blockargs.cpp  blockargs.h  blocksectioncontainer.h  compiler.cpp  compiler.h  compiler_p.cpp  compiler_p.h  compilerconstant.cpp  compilerconstant_p.cpp  compilerconstant_p.h  compilercontext.cpp  compilercontext_p.cpp  compilerlocalvariable.cpp  compilerlocalvariable_p.h  compilervalue.cpp  compilervalue_p.cpp  compilervalue_p.h  engine.cpp  engine.h  executioncontext.cpp  executioncontext_p.cpp  executioncontext_p.h  global.h  iblocksection.h  iextension.h  promise.cpp  promise_p.h  script.cpp  script.h  script_p.cpp  script_p.h  thread.cpp  thread_p.cpp  thread_p.h  virtualmachine.cpp  virtualmachine.h  virtualmachine_p.cpp  virtualmachine_p.h
src/imageformats/: CMakeLists.txt  defaultimageformats.cpp
src/internal/: CMakeLists.txt  downloader.cpp  downloader.h  downloaderfactory.cpp  downloaderfactory.h  idownloader.h  idownloaderfactory.h  iprojectdownloader.h  iprojectdownloaderfactory.h  iprojectreader.h  iscratchtarget.h  projectdownloader.cpp  projectdownloader.h  projectdownloaderfactory.cpp  projectdownloaderfactory.h  projectdownloaderstub.cpp  projectdownloaderstub.h  projecturl.cpp  projecturl.h  reader_common.h  scratch3reader.cpp  scratch3reader.h  zipreader.cpp  zipreader.h
src/scratch/: CMakeLists.txt  asset.cpp  asset.h  asset_p.cpp  asset_p.h  block.cpp  block.h  block_p.cpp  block_p.h  blockprototype.cpp  blockprototype.h  blockprototype_p.cpp  blockprototype_p.h  broadcast.cpp  broadcast.h  broadcast_p.cpp  broadcast_p.h  comment.cpp  comment_p.cpp  comment_p.h  costume.cpp  costume.h  costume_p.cpp  costume_p.h  drawable.cpp  drawable_p.cpp  drawable_p.h  entity.cpp  entity_p.cpp  entity_p.h  field.cpp  field.h  field_p.cpp  field_p.h  ientity.h  input.cpp  input.h  input_p.cpp  input_p.h  inputvalue.cpp  (+48 more)
src/test/: CMakeLists.txt  scriptbuilder.cpp  scriptbuilder_p.cpp  scriptbuilder_p.h
test/: 2_frames.sb3  3_threads.sb3  CMakeLists.txt  backdrop_broadcasts.sb3  broadcasts.sb3  bubble_sort.json  bubble_sort.sb3  clone_limit.sb3  clones.sb3  common.h  custom_blocks.sb3  default_project.json  default_project.sb3  empty_project.json  empty_project.sb3  execution_order.sb3  file_manager.json  file_manager.sb3  forever_loop.sb3  if.sb3  if_else.sb3  if_else_empty.sb3  if_empty.sb3  load_test.sb3  mouse_wheel.sb3  nested_statements.sb3  repeat10.sb3  repeat_empty.sb3  repeat_for_each.sb3  repeat_for_each_empty.sb3  repeat_until.sb3  repeat_while.sb3  resolve_id_test.sb3  sounds.sb3  sprite_fencing.sb3  step.sb3  stop_all.sb3  stop_all_bypass.sb3  stop_other_scripts_in_sprite.sb3  target_click_scripts.sb3  (+4 more)
test/assets/: CMakeLists.txt  asset_test.cpp  costume_test.cpp  sound_test.cpp  testasset.cpp  testasset.h
test/audio/: CMakeLists.txt  audioengine_test.cpp  audioinput_test.cpp  audiooutput_test.cpp  audioplayer_test.cpp  audioplayerfactory_test.cpp
test/blocks/: CMakeLists.txt  control_blocks_test.cpp  custom_blocks_test.cpp  event_blocks_test.cpp  list_blocks_test.cpp  looks_blocks_test.cpp  motion_blocks_test.cpp  operator_blocks_test.cpp  sensing_blocks_test.cpp  sound_blocks_test.cpp  util.cpp  util.h  variable_blocks_test.cpp
test/clock/: CMakeLists.txt  clock_test.cpp
test/compiler/: CMakeLists.txt  compiler_test.cpp  compilerconstant_test.cpp  compilercontext_test.cpp  compilerlocalvariable_test.cpp  compilervalue_test.cpp  testblocksection.cpp  testblocksection.h  testextension.cpp  testextension.h
test/dev/: CMakeLists.txt
test/engine/: CMakeLists.txt  engine_test.cpp  testsection.cpp
test/executioncontext/: executioncontext_test.cpp
test/extensions/: CMakeLists.txt  iblocksection_test.cpp  iextension_test.cpp  testextension.cpp  testextension.h  testsection.cpp  testsection.h
test/imageformats/: CMakeLists.txt  imageformatstub_test.cpp  jpeg_test.cpp  png_test.cpp
test/llvm/: CMakeLists.txt  llvmcodebuilder_test.cpp  llvmexecutablecode_test.cpp  llvmexecutioncontext_test.cpp  llvminstructionlist_test.cpp  llvmtestutils.cpp  llvmtestutils.h  testfunctions.cpp  testfunctions.h  testmock.h
test/load_project/: CMakeLists.txt  load_project_test.cpp
test/mocks/: CMakeLists.txt  audioenginemock.h  audioinputmock.h  audioloudnessmock.h  audiooutputmock.h  audioplayerfactorymock.h  audioplayermock.h  blocksectionmock.h  clockmock.h  codebuilderfactorymock.h  codebuildermock.h  compilercontextmock.h  downloaderfactorymock.h  downloadermock.h  enginemock.h  executablecodemock.h  extensionmock.h  graphicseffectmock.h  imageformatfactorymock.h  imageformatmock.h  monitorhandlermock.h  projectdownloaderfactorymock.h  projectdownloadermock.h  randomgeneratormock.h  soundmock.h  spritehandlermock.h  stacktimermock.h  stagehandlermock.h  targetmock.h  timermock.h
test/network/: CMakeLists.txt  downloaderfactory_test.cpp  (+3 more)
(+425 files in other folders)
